// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Update place when address is empty should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isNotEmpty": "address should not be empty",
      },
      "property": "address",
      "target": Object {
        "address": "",
      },
      "value": "",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update place when title is empty should fail 1`] = `
Object {
  "error": "Bad Request",
  "message": Array [
    Object {
      "children": Array [],
      "constraints": Object {
        "isNotEmpty": "title should not be empty",
      },
      "property": "title",
      "target": Object {
        "title": "",
      },
      "value": "",
    },
  ],
  "statusCode": 400,
}
`;

exports[`Update place when user is admin should succeed 1`] = `
Object {
  "address": "069 Murphy Union",
  "canDelete": true,
  "canEdit": true,
  "id": "d3973942-133b-55e4-920e-7b0033ab9d38",
  "rating": 3.75,
  "reviewCount": 0,
  "title": "The Noodle Farmer",
}
`;

exports[`Update place when user is owner when place belongs to the user should succeed 1`] = `
Object {
  "address": "069 Murphy Union",
  "bestReview": Object {
    "author": Object {
      "name": "Trenton Kessler",
    },
    "comment": "Field return long bed after.",
    "dateVisitted": "2018-11-25",
    "id": "d8320717-05e2-5fd0-83ee-0c36d13b55e1",
    "rating": 4,
    "reply": "Party environment control quality full less painting.",
  },
  "canDelete": true,
  "canEdit": true,
  "id": "05bd7b00-f274-5b91-9c48-08bfa24cb9bd",
  "rating": 0,
  "reviewCount": 0,
  "title": "Nicolas - Satterfield",
  "worstReview": Object {
    "author": Object {
      "name": "Christina Friesen",
    },
    "canReply": true,
    "comment": "Serious inside else memory if six.",
    "dateVisitted": "2018-11-25",
    "id": "93aa6df2-8c47-54b1-8445-4152fe33ab41",
    "rating": 1,
  },
}
`;

exports[`Update place when user is owner when place does not belong to the user should fail 1`] = `
Object {
  "error": "Forbidden",
  "statusCode": 403,
}
`;
